--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -52,16 +52,6 @@
         flex-direction: column;
       }
       
-      /* Loading state */
-      .loading {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        min-height: 100vh;
-        color: white;
-        font-size: 18px;
-        font-weight: 600;
-      }
       
       /* Responsive design for different devices */
       @media (max-width: 480px) {
@@ -90,9 +80,7 @@
     </style>
   </head>
   <body>
-    <div id="app">
-      <div class="loading">Loading RideWithUs...</div>
-    </div>
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
